--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,5 +1,6 @@
-<h1>News Reader APP</h1>
+<h1>News Reader APP <%= link_to "index", root_url %></h1>
+<hr>
+<div id='sidebar'></div>
 <div id='content'></div>
 
 <script></script>
-<%= link_to "index", root_url %>
