--- a/app/assets/templates/feeds/show.jst.ejs
+++ b/app/assets/templates/feeds/show.jst.ejs
@@ -1,10 +1,10 @@
-<h2><%= feed.title %></h2>
+<h2><%= feed.get("title") %></h2>
 
 <button class='refresh'>Refresh</button>
 
 <% feed.entries().each( function(entry){ %>
     <ul>
-      <li><%= entry.get("title") %></li>
+      <li><a href="#/feeds/<%=feed.id%>/entries/<%=entry.id%>" id="entry-title"><%= entry.get("title") %></a></li>
     </ul>
 <% }); %>
 
